--- a/docs/init-archive.org
+++ b/docs/init-archive.org
@@ -5,6 +5,50 @@
 Old configuration for emacs and friends. Primarily for reference or if
 I decide to re-use a package in the future.
 
+* elfeed
+I used elfeed for a while to manage my rss feeds within emacs. The
+plugin works well however the act of reading blogposts within Emacs
+was not appealing.
+
+I ended up opening majority of the articles in my browser and with the
+state of modern web pages, eww can't display them properly.
+
+I ended up switching to a paid application called Reeder 5 which has a
+built in browser and intuitive keyboard shortcuts.
+#+begin_src emacs-lisp
+  (use-package elfeed
+    :straight t
+    :config
+    (setq elfeed-feeds
+	  ;; blogs
+	  '(("http://googleaiblog.blogspot.com/atom.xml" blog)
+	    ("https://deepmind.com/blog/feed/basic/" blog)
+	    ("https://martinfowler.com/feed.atom" blog)
+	    ("https://github.blog/engineering.atom" blog)
+	    ("https://research.atspotify.com/feed" blog)
+	    ("https://engineering.atspotify.com/feed" blog)
+	    ("https://www.kdnuggets.com/feed" blog)
+	    ("https://machinelearningmastery.com/feed/" blog)
+	    ("https://api.quantamagazine.org/feed/" blog)
+	    ;; papers
+	    ("http://arxiv.org/rss/cs.SE" paper)
+	    ;; videos
+	    ("https://www.youtube.com/c/3blue1brown" video)
+	    ("https://www.youtube.com/c/ProtesilaosStavrou" video)
+	    ("https://www.youtube.com/user/Computerphile" video)
+	    ("https://www.youtube.com/c/minutephysics" video)
+	    ;; news
+	    ("dutchnews.nl/feed" news)
+	    ("http://feeds.bbci.co.uk/news/world/rss.xml" news)
+	    ("http://feeds.feedburner.com/euronews/en/home/" news)
+	    ;; others
+	    ("https://hnrss.org/frontpage" other)
+	    ("https://hnrss.org/bestcomments" other)
+	    ("https://hnrss.org/best" other)))
+    (setq-default elfeed-search-filter "@1-week-ago +unread ")
+    :bind (:map ctl-x-map
+		("w" . elfeed)))
+#+end_src
 * selectrum & prescient
 #+begin_src emacs-lisp
 (use-package prescient
